--- a/src/app/Account/register/register.html
+++ b/src/app/Account/register/register.html
@@ -1,1 +1,38 @@
-<p>register works!</p>
+<section>
+    <div class="row">
+        <div class="col-md-6 d-flex justify-content-center align-items-center">
+            <img class="w-100" src="/images/1.jpg" alt="">
+        </div>
+        <div class="col-md-6">
+            <form>
+                <h1 class="text-center mb-5">Signup</h1>
+                <div class="my-3">
+                    <input type="text" class="custom-input my-2" placeholder="Full Name">
+                    <p class="text-danger ms-2">Name Invalid</p>
+                </div>
+                <div class="my-3">
+                    <input type="text" class="custom-input my-2" placeholder="Email">
+                    <p class="text-danger ms-2">Email Invalid</p>
+                </div>
+                <div class="my-3">
+                    <input type="text" class="custom-input my-2" placeholder="Address">
+                    <p class="text-danger ms-2">Address Invalid</p>
+                </div>
+                <div class="my-3">
+                    <input type="text" class="custom-input my-2" placeholder="Password">
+                    <p class="text-danger ms-2">Password Invalid</p>
+                </div>
+                <div class="my-3">
+                    <input type="text" class="custom-input my-2" placeholder="Confirm Password">
+                    <p class="text-danger ms-2">Password Invalid</p>
+                </div>
+                <div class="text-center fs-5">
+                    <span>Already have an account? <a href="#" class="text-decoration-none">Login</a></span>
+                </div>
+                <div class="my-3 d-flex justify-content-center">
+                    <button class="custom-button">Register</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</section>
