--- a/src/app/Components/navbar/navbar.html
+++ b/src/app/Components/navbar/navbar.html
@@ -1,1 +1,24 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg">
+  <div class="container-fluid py-3 px-md-5 px-4 text-white">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item mx-3">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item mx-3">
+          <a class="nav-link" href="#">Exams</a>
+        </li>
+        <li class="nav-item mx-3">
+          <a class="nav-link" href="#">Login</a>
+        </li>
+        <li class="nav-item mx-3">
+          <a class="nav-link" href="#">Signup</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
