--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -1,1 +1,20 @@
-<p>home works!</p>
+<section>
+    <div class="row">
+        <div class="col-md-6 d-flex justify-content-center align-items-center">
+            <div>
+                <img class="w-100" src="/images/1.jpg" alt="">
+            </div>
+        </div>
+        <div class="col-md-6 text-center d-flex justify-content-center py-5">
+            <div>
+                <h1 class="text-uppercase mb-5">Welcome To Examine</h1>
+                <p class="fs-5">
+                    Easily take exams, track your perfomance, and stay on top of your academic journey.
+                    <br/>
+                    Whether you are a student ot an instructor, Examine helps you manage everything from one simple platform
+                </p>
+                <button [routerLink]="['/register']" class="custom-button d-block mx-auto mt-4">Join Us</button>
+            </div>
+        </div>
+    </div>
+</section>
