--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
-<section class="container my-5">
-    <app-register></app-register>
+<section class="container my-5 flex-grow-1 d-flex justify-content-center align-items-center">
+    <div class="w-100">
+        <router-outlet/>
+    </div>
 </section>
