--- a/src/app/Account/register/register.html
+++ b/src/app/Account/register/register.html
@@ -4,33 +4,67 @@
             <img class="w-100" src="/images/1.jpg" alt="">
         </div>
         <div class="col-md-6">
-            <form>
+            <form [formGroup]="registerForm" (submit)="register()">
                 <h1 class="text-center mb-5">Signup</h1>
                 <div class="my-3">
-                    <input type="text" class="custom-input my-2" placeholder="Full Name">
-                    <p class="text-danger ms-2">Name Invalid</p>
+                    <input type="text" class="custom-input my-2" placeholder="Full Name" formControlName="name">
+                    @if (getName().touched) 
+                    {
+                        @if (getName().hasError("required")) 
+                        {
+                            <p class="text-danger ms-2">Name Required</p>
+                        }
+                    }
                 </div>
                 <div class="my-3">
-                    <input type="text" class="custom-input my-2" placeholder="Email">
-                    <p class="text-danger ms-2">Email Invalid</p>
+                    <input type="email" class="custom-input my-2" placeholder="Email" formControlName="email">
+                    @if (getEmail().touched)
+                    {
+                        @if (getEmail().hasError("required")) 
+                        {
+                            <p class="text-danger ms-2">Email Required</p>
+                        }
+                        @if (getEmail().hasError("email"))
+                        {
+                            <p class="text-danger ms-2">Email Invalid</p>
+                        }
+                    }
                 </div>
                 <div class="my-3">
-                    <input type="text" class="custom-input my-2" placeholder="Address">
-                    <p class="text-danger ms-2">Address Invalid</p>
+                    <input type="text" class="custom-input my-2" placeholder="Address" formControlName="address">
+                    @if (getAddress().touched)
+                    {
+                        @if (getAddress().hasError("required")) 
+                        {
+                            <p class="text-danger ms-2">Address Required</p>
+                        }
+                    }
                 </div>
                 <div class="my-3">
-                    <input type="text" class="custom-input my-2" placeholder="Password">
-                    <p class="text-danger ms-2">Password Invalid</p>
+                    <input type="password" class="custom-input my-2" placeholder="Password" formControlName="password">
+                    @if (getPassword().touched) 
+                    {
+                        @if (getPassword().hasError("required")) 
+                        {
+                            <p class="text-danger ms-2">Password Required</p>
+                        }
+                    }
                 </div>
                 <div class="my-3">
-                    <input type="text" class="custom-input my-2" placeholder="Confirm Password">
-                    <p class="text-danger ms-2">Password Invalid</p>
+                    <input type="password" class="custom-input my-2" placeholder="Confirm Password" formControlName="confirmPassword">
+                    @if (getConfirmPassword().touched) 
+                    {
+                        @if (getConfirmPassword().value != getPassword().value)
+                        {
+                            <p class="text-danger ms-2">Passwords Not Matched</p>
+                        }
+                    }
                 </div>
                 <div class="text-center fs-5">
-                    <span>Already have an account? <a href="#" class="text-decoration-none">Login</a></span>
+                    <span>Already have an account? <a [routerLink]="['/login']" class="text-decoration-none">Login</a></span>
                 </div>
                 <div class="my-3 d-flex justify-content-center">
-                    <button class="custom-button">Register</button>
+                    <button type="submit" class="custom-button">Register</button>
                 </div>
             </form>
         </div>
