--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,6 @@
-<app-navbar></app-navbar>
-<section class="container my-5">
+ <app-navbar></app-navbar>
+<!-- <section class="container my-5">
     <app-register></app-register>
-</section>
+</section>  -->
+<!-- <app-dashboard></app-dashboard> -->
+<app-admin-dashboard></app-admin-dashboard>
