--- a/src/app/Account/login/login.html
+++ b/src/app/Account/login/login.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="row">
+    <div class="row bg-white rounded-5 px-4 py-5">
         <div class="col-md-6 d-flex justify-content-center align-items-center">
             <img class="w-100" src="/images/1.jpg" alt="">
         </div>
