--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="row">
+    <div class="row bg-white rounded-5 p-4">
         <div class="col-md-6 d-flex justify-content-center align-items-center">
             <div>
                 <img class="w-100" src="/images/1.jpg" alt="">
@@ -18,3 +18,5 @@
         </div>
     </div>
 </section>
+
+
