add and update exam with new ans and new question models

--- a/src/app/Components/exam-card/exam-card.html
+++ b/src/app/Components/exam-card/exam-card.html
@@ -10,7 +10,8 @@
     <div class="offset-6 col-3 text-center d-flex align-items-center">
         <div class="ms-auto">
             <h4>Open Until 10 July</h4>
-            <button class="custom-button">Take Exam</button>
+            <!-- <button class="custom-button">Take Exam</button> -->
+            <button class="custom-button" [routerLink]="['/examquestions',exam.id]">Edit Exam</button>            
         </div>
     </div>
 </div>
