--- a/src/app/Components/navbar/navbar.html
+++ b/src/app/Components/navbar/navbar.html
@@ -18,6 +18,10 @@
         <li class="nav-item mx-3">
           <a class="nav-link" [routerLink]="['/register']" [routerLinkActive]="'text-danger'">Signup</a>
         </li>
+
+        <li class="nav-item mx-3">
+          <a class="nav-link" [routerLink]="['/newexam']" [routerLinkActive]="'text-danger'">Add new Exam</a>
+        </li>
       </ul>
     </div>
   </div>
