--- a/src/app/Components/exam-card/exam-card.html
+++ b/src/app/Components/exam-card/exam-card.html
@@ -8,10 +8,10 @@
         </div>
     </div>
     <div class="offset-6 col-3 text-center d-flex align-items-center">
-        <div class="ms-auto">
+        <div class="ms-auto p-4">
             <h4>Open Until 10 July</h4>
-            <!-- <button class="custom-button">Take Exam</button> -->
-            <button class="custom-button" [routerLink]="['/examquestions',exam.id]">Edit Exam</button>            
+            <button class="custom-button mx-auto" [routerLink]="['/takeexam', exam.id, 1]">Take Exam</button>
+            <button class="custom-button mx-auto" [routerLink]="['/examquestions',exam.id]">Edit Exam</button>
         </div>
     </div>
 </div>
