--- a/src/app/Components/exam-questions/exam-questions.html
+++ b/src/app/Components/exam-questions/exam-questions.html
@@ -1,74 +1,36 @@
-<table class="table table-dark">
-  <thead>
-    <tr>
-      <th scope="col">ID</th>
-      <th scope="col">body</th>
-      <th scope="col">Grade</th>
-      <th scope="col">Ans1</th>
-      <th scope="col">Ans2</th>
-      <th scope="col">Ans3</th>
-      <th scope="col">Ans4</th>
-      <th scope="col">Delete</th>
-    </tr>
-  </thead>
-  <tbody>
-    @for ( question of allQs; track question.id) {
-         <tr>
-      <th scope="row"> {{question.id}} </th>
-
-      <td>
-      <input [(ngModel)]="question.body">  
-      </td>
+<section>
+      <div class="py-5">
+        <h1 class="text-center mb-4">Questions</h1>
+        
+        @for ( question of allQs; track question.id && $index) {
+          <app-question-card [question]="question" [questionNumber]="$index + 1" (deleteEmitter)="updateQuestions($event)"></app-question-card>
+        }
 
 
-      <td>
-      <input [(ngModel)]="question.grade">  
-      </td>
-      @for (ans of question.answers; track $index) {
+        @for (new of newQs; track $index) {
+          <div class="bg-white rounded-5 p-4 my-4">
+            <div class="my-3">
+              <label class="form-label fs-4">Question</label>
+              <input [(ngModel)]="new.body" class="custom-input" placeholder="Enter Question">  
+            </div>
 
-        <td>
-          <input [(ngModel)]="ans.answerText">  
-        </td>
-      }
-
-      @if(question.answers.length!=4) {
-        <td></td>
-        <td></td>
-      }
-      <button (click)="del($index)"class="btn btn-danger" > Delete </button>
-     
-
-    </tr>
-    }
-
-          @for ( new of newQs; track $index) {
-         <tr>
-      <th scope="row"> {{"Static"}} </th>
-
-      <td>
-      <input [(ngModel)]="new.body">  
-      </td>
-
-      <td>
-      <input [(ngModel)]="new.grade">  
-      </td>
-      @for (ans of new.answers; track $index) {
-
-        <td>
-          <input [(ngModel)]="ans.answerText">  
-        </td>
-      }
-
-      <!-- <button (click)="del($index)"class="btn btn-danger" > Delete </button> -->
-     
-
-    </tr>
-    }
+            <div class="my-3">
+              <label class="form-label fs-4">Grade</label>
+              <input [(ngModel)]="new.grade" class="custom-input">  
+            </div>
+            @for (ans of new.answers; track $index) {
+              <div>
+                <label class="form-label fs-4">Answer {{$index + 1}} @if($index == 0) {(True Answer)}</label>
+                <input [(ngModel)]="ans.answerText" class="custom-input" placeholder="Enter Answer">
+              </div>
+            }
+          </div>
+        }
+        <div class="d-flex justify-content-center gap-4">
+          <button (click)="savetoDB()" class="custom-button" > Save All </button>
+          <button  class="custom-button" (click)="AddnewQ()" > Add Question </button>
+        </div>
+      </div>
+</section>
 
 
-    </tbody>
-    </table>
-
-     <button (click)="savetoDB()" class="btn btn-success" > Save all </button>
-     <hr>
-     <button  class="btn btn-success" (click)="AddnewQ()" > Add new question </button>
