--- a/src/styles.css
+++ b/src/styles.css
@@ -13,11 +13,11 @@ body
     flex-direction: column;
 }
 
-h1, button, nav
+/* h1, nav
 {
     color: #271b55;
     font-family: "Irish Grover", system-ui;
-}
+} */
 
 .custom-input
 {
@@ -54,8 +54,39 @@ textarea:focus, input:focus, input[type]:focus
 {
     color: #fff;
     background-color: #271b55;
-    padding: .5rem .7rem;
+    padding: .375rem .75rem;
     border: 1px solid #271b55;
-    border-radius: 10px;
-    letter-spacing: 2px;
+    border-radius: 0.375rem;
+    display: block;
+    transition: all 0.15s ease-in-out;
 }
+
+.custom-button-outline
+{
+    color: #271b55;
+    background-color: transparent;
+    padding: .375rem .75rem;
+    border: 1px solid #271b55;
+    border-radius: 0.375rem;
+    display: block;
+    transition: all 0.15s ease-in-out;
+}
+
+.custom-button:hover
+{
+    background-color: #423775;
+    border-color: #423775;
+    color: #fff;
+}
+
+.custom-button-outline:hover
+{
+    background-color: #271b55;
+    color: #fff;
+}
+
+/* html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
+
+
+
