--- a/src/app/Components/navbar/navbar.html
+++ b/src/app/Components/navbar/navbar.html
@@ -22,6 +22,9 @@
         <li class="nav-item mx-3">
           <a class="nav-link" [routerLink]="['/newexam']" [routerLinkActive]="'text-danger'">Add new Exam</a>
         </li>
+        <li class="nav-item mx-3">
+          <a class="nav-link" [routerLink]="['/students']" [routerLinkActive]="'text-danger'">Students</a>
+        </li>
       </ul>
     </div>
   </div>
