--- a/src/app/Components/student-exams/student-exams.html
+++ b/src/app/Components/student-exams/student-exams.html
@@ -1,20 +1,19 @@
-<div class="container mt-4">
-  <h3 class="mb-4">Taken Exams</h3>
-
-  <div class="row">
-    <div class="col-md-6 mb-3" *ngFor="let exam of exams">
-      <div class="card shadow-sm">
-        <div class="card-body">
-          <h5 class="card-title">{{ exam.examName }}</h5>
-          <p class="card-text">
-            <strong>Grade:</strong> {{ exam.studentGrade }}
-          </p>
-        </div>
+<div class="container my-5">
+  <h1 class="mb-5 text-center">Taken Exams</h1>
+  <div class="row gy-4 justify-content-center">
+    @for (exam of exams; track exam.examId) 
+    {
+      <div class="col-xl-4 col-lg-6 col-md-8 col-9">
+        <app-taken-exam-card [exam]="exam"></app-taken-exam-card>
       </div>
-    </div>
+    }
   </div>
 
-  <div *ngIf="exams.length === 0" class="alert alert-info">
-    This student has not taken any exams yet.
-  </div>
+  @if (exams.length == 0) 
+  {
+    <div class="alert alert-info">
+      <p class="fs-4">This student has not taken any exams yet.</p>
+    </div>
+  }
+
 </div>
