--- a/src/app/Components/exam-questions/exam-questions.html
+++ b/src/app/Components/exam-questions/exam-questions.html
@@ -6,9 +6,8 @@
           <app-question-card [question]="question" [questionNumber]="$index + 1" (deleteEmitter)="updateQuestions($event)"></app-question-card>
         }
 
-
         @for (question of newQs; track $index) {
-          <app-edit-question-card [question]="question"></app-edit-question-card>
+          <app-add-question-card [question]="question"></app-add-question-card>
         }
         <button class="custom-button mx-auto" (click)="AddnewQ()" > Add Question </button>
       </div>
