--- a/src/app/Components/student-exams/student-exams.html
+++ b/src/app/Components/student-exams/student-exams.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container mt-4"> 
   <h3 class="mb-4">Taken Exams</h3>
 
   <div class="row">
@@ -9,6 +9,11 @@
           <p class="card-text">
             <strong>Grade:</strong> {{ exam.studentGrade }}
           </p>
+          <!-- 🔘 View Results Button -->
+          <a class="btn btn-outline-primary"
+             [routerLink]="['/student', StudentId, 'exams', exam.examID]" >
+             View Result
+          </a>
         </div>
       </div>
     </div>
