--- a/src/app/Components/student-exams/student-exams.html
+++ b/src/app/Components/student-exams/student-exams.html
@@ -2,23 +2,26 @@
   <h3 class="mb-4">Taken Exams</h3>
 
   <div class="row">
-    <div class="col-md-6 mb-3" *ngFor="let exam of exams">
+    <div class="col-md-6 mb-3" *ngFor="let currentExam of exams">
       <div class="card shadow-sm">
-        <div class="card-body">
+        <!-- <div class="card-body">
           <h5 class="card-title">{{ exam.examName }}</h5>
           <p class="card-text">
             <strong>Grade:</strong> {{ exam.studentGrade }}
           </p>
-        </div>
+          <button class="btn btn-primary mt-3" [routerLink]="['/student', StudentId, 'exams', exam.examID]">
+            View Student Answers 
+          </button>
+        </div> -->
+        <app-taken-exam-card [exam]="currentExam" [studentID]="StudentId"></app-taken-exam-card>
       </div>
-    }
-  </div>
+    </div>
 
-  @if (exams.length == 0) 
-  {
+    @if (exams.length == 0)
+    {
     <div class="alert alert-info">
       <p class="fs-4">This student has not taken any exams yet.</p>
     </div>
-  }
+    }
 
-</div>
+  </div>
