Login and register handled

--- a/src/app/Components/exam-card/exam-card.html
+++ b/src/app/Components/exam-card/exam-card.html
@@ -10,7 +10,7 @@
     <div class="offset-6 col-3 text-center d-flex align-items-center">
         <div class="ms-auto p-4">
             <h4>Open Until 10 July</h4>
-            <button class="custom-button mx-auto" [routerLink]="['/takeexam', exam.id, 1]">Take Exam</button>
+            <button class="custom-button mx-auto" [routerLink]="['/takeexam', exam.id, studentId]">Take Exam</button>
             <button class="custom-button mx-auto" [routerLink]="['/examquestions',exam.id]">Edit Exam</button>
         </div>
     </div>
