--- a/src/app/Components/dashboard/scorechart/scorechart.html
+++ b/src/app/Components/dashboard/scorechart/scorechart.html
@@ -1,7 +1,7 @@
 <div class="position-relative text-center">
   <canvas #scoreCanvas></canvas>
   <div class="position-absolute top-50 start-50 translate-middle">
-    <h4 class="fw-bold mb-0">87%</h4>
+    <h4 class="fw-bold mb-0">{{score}}</h4>
     <small class="text-muted">Total Accuracy</small>
   </div>
 </div>
