--- a/src/app/Components/exam-card/exam-card.html
+++ b/src/app/Components/exam-card/exam-card.html
@@ -1,5 +1,5 @@
 <div class="row my-5 exam-card py-4 px-4">
-    <div class="col-3">
+    <div class="col-6">
         <h2>{{exam.name}}</h2>
         <div class="ps-4">
             <h4>Duration: {{exam.duration}}</h4>
@@ -7,11 +7,21 @@
             <h4>Min Grade: {{exam.minGrade}}</h4>
         </div>
     </div>
-    <div class="offset-6 col-3 text-center d-flex align-items-center">
+    <div class="offset-2 col-4 text-center d-flex align-items-center">
         <div class="ms-auto p-4">
-            <h4>Open Until 10 July</h4>
-            <button class="custom-button mx-auto" [routerLink]="['/takeexam', exam.id, studentId]">Take Exam</button>
-            <button class="custom-button mx-auto" [routerLink]="['/examquestions',exam.id]">Edit Exam</button>
+            @if (userRole == "Student") {
+                <button class="custom-button mx-auto" [routerLink]="['/takeexam', exam.id, studentId]">Take Exam</button>
+            }
+            @if (userRole == "Admin") {
+                <div class="d-flex justify-content-center gap-2">
+                    <button class="btn btn-danger d-block"
+                    [swal]="{title: 'Confirmation', text: 'Are you sure you want to delete this exam?', showCancelButton: true}"
+                    (confirm)="deleteExam()">
+                        <i class="bi bi-trash3"></i> Delete Exam
+                    </button>
+                    <button class="custom-button" [routerLink]="['/examquestions',exam.id]"><i class="bi bi-pencil-square"></i> Edit Exam</button>
+                </div>
+            }
         </div>
     </div>
 </div>
