--- a/src/app/Components/student-exams/student-exams.html
+++ b/src/app/Components/student-exams/student-exams.html
@@ -1,18 +1,9 @@
-<div class="container mt-4">
-  <h3 class="mb-4">Taken Exams</h3>
+<div class="container my-5">
+  <h1 class="mb-4 text-center">Taken Exams</h1>
 
-  <div class="row">
-    <div class="col-md-6 mb-3" *ngFor="let currentExam of exams">
+  <div class="row justify-content-center">
+    <div class="col-md-4 mb-3" *ngFor="let currentExam of exams">
       <div class="card shadow-sm">
-        <!-- <div class="card-body">
-          <h5 class="card-title">{{ exam.examName }}</h5>
-          <p class="card-text">
-            <strong>Grade:</strong> {{ exam.studentGrade }}
-          </p>
-          <button class="btn btn-primary mt-3" [routerLink]="['/student', StudentId, 'exams', exam.examID]">
-            View Student Answers 
-          </button>
-        </div> -->
         <app-taken-exam-card [exam]="currentExam" [studentID]="StudentId"></app-taken-exam-card>
       </div>
     </div>
