--- a/src/app/Components/taken-exam-card/taken-exam-card.html
+++ b/src/app/Components/taken-exam-card/taken-exam-card.html
@@ -10,7 +10,7 @@
     </h4>
 
     <button 
-      class="btn btn-primary mt-3"
+      class="custom-button-outline mt-3 mx-auto"
       [routerLink]="['/student', studentID, 'exams', exam.examID]">
       View Details
     </button>
