--- a/src/app/Components/navbar/navbar.html
+++ b/src/app/Components/navbar/navbar.html
@@ -48,7 +48,7 @@
         }
         @else {
           <li class="nav-item mx-3">
-            <a class="nav-link" [routerLink]="['/login']" [routerLinkActive]="'text-danger'" (click)="logout()">Logout</a>
+            <a class="nav-link" [routerLink]="['/login']" [routerLinkActive]="'text-danger'" (click)="logout()">Logout {{x}}</a>
           </li>
         }
       </ul>
