--- a/src/app/Dashboards/admin-dashboard/admin-dashboard.html
+++ b/src/app/Dashboards/admin-dashboard/admin-dashboard.html
@@ -1,3 +1,4 @@
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "square-jelly-box" [fullScreen] = "true"><p style="color: white" > Nearly There... </p></ngx-spinner>
 <section class="px-3 mb-3 mt-3">
   <h4 class="fw-bold">Hey, {{ teacher.name }} 👋</h4>
   <p class="text-muted small mb-0">Here’s your current progress</p>
