--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -14,7 +14,7 @@
                     Whether you are a student ot an instructor, Examine helps you manage everything from one simple platform
                 </p>
                 @if (!isAuth) {
-                    <button [routerLink]="['/register']" class="custom-button d-block mx-auto mt-4">Join Us</button>
+                    <button [routerLink]="['/register']" class="custom-button d-block mx-auto mt-4 fs-4">Join Us</button>
                 }
             </div>
         </div>
