--- a/src/app/Pages/take-exam/take-exam.html
+++ b/src/app/Pages/take-exam/take-exam.html
@@ -7,15 +7,13 @@
         <h3>{{$index + 1}}- <span class="ms-2">{{ question.body }}</span></h3>
         @for ( answer of question.answers; track answer.id) {
           <div class="ms-5">
-            <div class="radio-container">
-              <input
-                type="radio"
+            <div class="form-check fs-5">
+              <input class="form-check-input" type="radio" 
                 [id]="'q' + question.id + '_a' + answer.id"
                 [value]="answer.id"
-                [formControlName]="question.id!.toString()"
-              />
-              <span class="checkmark"></span>
-              <label [for]="'q' + question.id + '_a' + answer.id" class="form-label ms-2 fs-5">
+                [formControlName]="question.id!.toString()">
+                
+              <label class="form-check-label" [for]="'q' + question.id + '_a' + answer.id">
                 {{ answer.answerText }}
               </label>
             </div>
